# micropython-env

./: .gitignore  CONTRIBUTING.md  Env.py  LICENSE  Makefile  README.md  m_config.mk  m_mpfs_cmd.mk  pyproject.toml  setup.cfg  setup.py
examples/: boot.py  env.json  main.py
mpy_env/: __init__.py  msgpack.py
msgpack_validation/: __init__.py  mpy_dump.py  mpy_load.py  official_dump.py  official_load.py
test/: README.md  boot.py  env.json  install.ps1  main.py
tests/: test_mpy_env.py  test_msgpack.py
tools/: dump_mpfs_cmd.py
