[metadata]
name = micropython-mpy-env
version = 0.1.0
author = Shen-Teng Tu
author_email = tusamten@gmail.com
home-page = https://github.com/ShenTengTu/micropython-env
description = Simple environment variable loader for MicroPython board.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = MicroPython
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: Implementation :: MicroPython
    Topic :: Software Development

[options]
packages = find:

[options.packages.find]
include = mpy_env,mpy_env.*